--- a/styles/estilosHome.css
+++ b/styles/estilosHome.css
@@ -20,3 +20,11 @@
     z-index: -1;
 
 }
+
+.banner2{
+    background-image: url("../img/banner2.jpg");
+    padding: 25%;
+    background-size: cover;
+    background-position: top center;
+    background-attachment: fixed;
+}
